navigation: fix overflow issue

--- a/webapp/app/components/navigation/components/assessment/section/section.less
+++ b/webapp/app/components/navigation/components/assessment/section/section.less
@@ -34,12 +34,11 @@
 
 .nav-section__items-hidden {
   max-height: 0;
-  overflow: hidden;
   transition: max-height 0.15s ease-out;
 }
 
 .nav-section__items-visible {
   max-height: 500px;
-  overflow: hidden;
+  overflow: auto;
   transition: max-height 0.25s ease-out;
 }
